--- a/package.json
+++ b/package.json
@@ -18,11 +18,8 @@
   },
   "homepage": "http://rackt.github.io/redux",
   "dependencies": {
-    "babel": "^5.8.21",
-    "babel-core": "^5.8.22",
-    "babel-loader": "=5.3.2",
-    "babel-plugin-react-transform": "=1.1.0",
-    "babel-runtime": "^5.8.20",
+    "babel-polyfill": "^6.3.14",
+    "babel-register": "^6.4.3",
     "body-parser": "^1.14.2",
     "debug": "^2.2.0",
     "dotenv": "^1.2.0",
@@ -37,15 +34,15 @@
     "react-addons-css-transition-group": "^0.14.3",
     "react-addons-transition-group": "^0.14.3",
     "react-async-script-loader": "^0.1.1",
-    "react-dom": "^0.14.0",
+    "react-dom": "^0.14.7",
     "react-mixin": "^2.0.2",
     "react-motion": "^0.3.1",
-    "react-redux": "^4.0.0",
+    "react-redux": "^4.2.1",
     "react-router": "^2.0.0",
     "react-router-redux": "^4.0.0",
     "react-script-loader": "0.0.1",
     "react-transform-hmr": "^1.0.0",
-    "redux": "^3.0.5",
+    "redux": "^3.2.1",
     "redux-thunk": "^1.0.3",
     "serve-static": "^1.10.0",
     "superagent": "^1.6.1",
@@ -55,6 +52,12 @@
     "webpack-hot-middleware": "^2.2.0"
   },
   "devDependencies": {
+    "babel-core": "^6.3.15",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-runtime": "^6.3.13",
     "autoprefixer": "^6.1.1",
     "css-loader": "^0.23.0",
     "extract-text-webpack-plugin": "^0.9.1",
