--- a/package.json
+++ b/package.json
@@ -20,51 +20,57 @@
   "dependencies": {
     "babel-polyfill": "^6.3.14",
     "babel-register": "^6.4.3",
-    "body-parser": "^1.14.2",
-    "debug": "^2.2.0",
-    "dotenv": "^1.2.0",
-    "es6-promise": "^3.0.2",
+    "body-parser": "^1.15.0",
+    "composable-middleware": "^0.3.0",
+    "connect-mongo": "^1.1.0",
+    "cookie-parser": "^1.4.1",
+    "dotenv": "^2.0.0",
     "express": "^4.13.3",
-    "history": "^2.0.0",
-    "json-loader": "^0.5.4",
-    "morgan": "^1.6.1",
-    "nodemon": "^1.9.1",
+    "express-jwt": "^3.3.0",
+    "express-session": "^1.13.0",
+    "history": "^2.1.1",
+    "jsonwebtoken": "^6.2.0",
+    "mongoose": "^4.4.14",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "qs": "^4.0.0",
-    "react": "^0.14.0",
-    "react-addons-css-transition-group": "^0.14.3",
-    "react-addons-transition-group": "^0.14.3",
-    "react-async-script-loader": "^0.1.1",
+    "react": "^0.14.7",
+    "react-cookie": "^0.4.5",
     "react-dom": "^0.14.7",
-    "react-mixin": "^2.0.2",
-    "react-motion": "^0.3.1",
     "react-redux": "^4.2.1",
     "react-router": "^2.0.0",
     "react-router-redux": "^4.0.0",
-    "react-script-loader": "0.0.1",
-    "react-transform-hmr": "^1.0.0",
     "redux": "^3.2.1",
+    "redux-auth-wrapper": "^0.4.0",
+    "redux-form": "^5.2.3",
+    "redux-socket.io": "^1.2.0",
     "redux-thunk": "^1.0.3",
+    "serve-favicon": "^2.3.0",
     "serve-static": "^1.10.0",
-    "superagent": "^1.6.1",
-    "timeout-transition-group": "^2.0.1",
-    "webpack": "^1.11.0",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.2.0"
+    "socket.io": "^1.4.6",
+    "socket.io-client": "^1.4.6",
+    "superagent": "^1.8.3"
   },
   "devDependencies": {
+    "autoprefixer": "^6.1.1",
     "babel-core": "^6.3.15",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-runtime": "^6.3.13",
-    "autoprefixer": "^6.1.1",
     "css-loader": "^0.23.0",
     "extract-text-webpack-plugin": "^0.9.1",
     "postcss-custom-media": "^5.0.0",
     "postcss-easings": "^0.3.0",
     "postcss-loader": "^0.8.0",
     "precss": "^1.3.0",
-    "style-loader": "^0.13.0"
+    "style-loader": "^0.13.0",
+    "webpack": "^1.11.0",
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-hot-middleware": "^2.9.1"
   }
 }
